--- a/static/styles.css
+++ b/static/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: linear-gradient(0deg, #e864d6 0%, #489ef9 100%);
+    background: linear-gradient(0deg, #ff0000 0%, #ff8800 100%);
     color: #000000;
     display: flex;
     flex-direction: column;
