--- a/Templates/results.html
+++ b/Templates/results.html
@@ -55,11 +55,16 @@
                 <li>{{ instrument }} <button>Mute</button></li>
             {% endfor %}
         </ul>
-        
         <audio controls>
-            <source src="/path/to/your/audiofile" type="audio/mpeg">
+            <source src="{{ audio_file_url }}" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
     </div>
-</body>
+
+    <script>
+        window.addEventListener('beforeunload', function() {
+            fetch('/cleanup');
+        });
+    </script>
+    </body>
 </html>
