pokusy o prehrati skladby

--- a/Templates/results.html
+++ b/Templates/results.html
@@ -56,7 +56,7 @@
             {% endfor %}
         </ul>
         <audio controls>
-            <source src="{{ audio_file_url }}" type="audio/mpeg">
+            <source src="{{ audio_file_url }}" type="audio/mp3">
             Your browser does not support the audio element.
         </audio>
     </div>
