--- a/Templates/results.html
+++ b/Templates/results.html
@@ -27,7 +27,7 @@
             text-align: center;
             margin-top: 20px;
             padding: 20px;
-            background-color: rgba(255, 255, 255, 0.2);
+            background-color: rgba(69, 69, 69, 0.2);
             border-radius: 10px;
             width: 80%;
             max-width: 800px;
@@ -118,9 +118,8 @@
             });
         });
     });
-
-    window.addEventListener('beforeunload', function() {
-        fetch('/cleanup', { method: 'POST' });
+    window.addEventListener("beforeunload", function(event) {
+        fetch("/cleanup", { method: "POST" });
     });
     </script>
 </body>
