--- a/static/styles.css
+++ b/static/styles.css
@@ -2,8 +2,8 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: linear-gradient(0deg, #ff3c00 0%, #ff9900 100%);
-    color: #000000;
+    background-color: #212121;
+    color: #98FCFF;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,7 +12,7 @@ body {
 }
 
 h1 {
-    color: #233241;
+    color: #98FCFF;
     font-size: 75px;
     margin-bottom: 1px;
 }
