--- a/Templates/results.html
+++ b/Templates/results.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Analysis Results</title>
     <link rel="stylesheet" href="/static/styles.css">
+    <link rel="manifest" href="/static/manifest.json">
     <style>
         ul {
             list-style-type: none;
@@ -80,7 +81,7 @@
             Your browser does not support the audio element.
         </audio>              
     </div>
-
+    <script src="/static/app.js"></script>
     <script>
         function reloadAudio() {
             const audioPlayer = document.getElementById("audio-player");
