--- a/Templates/results.html
+++ b/Templates/results.html
@@ -6,6 +6,8 @@
     <title>Analysis Results</title>
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="manifest" href="/static/manifest.json">
+    <link rel="icon" href="/static/icons/icon-512x512.png" type="image/png">
+
     <style>
         ul {
             list-style-type: none;
