--- a/Templates/index.html
+++ b/Templates/index.html
@@ -6,6 +6,7 @@
     <title>Music Analyzer</title>
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="manifest" href="/static/manifest.json">
+    <link rel="icon" href="/static/icons/icon-512x512.png" type="image/png">
     <style>
         body {
             font-family: Arial, sans-serif;
