--- a/Frontend/Templates/index.html
+++ b/Frontend/Templates/index.html
@@ -94,6 +94,7 @@
     <div id="loadingText">Loading...</div>
     <div id="loadingContainer">
         <div id="loadingBar"></div>
+        <progress id="progressBar" value="0" max="100" style="width: 100%;"></progress>
     </div>
     <div id="results"></div>
     <div id="error"></div>
